# flourish

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  dev.sh  fly.beta.toml  fly.toml  pyproject.toml
config/: talents.yaml
data/: resto_talent_tree_raw.json
docs/: ingame-testing.md  raidbots_druid_talents.json  rdruid-tree-api-response.jq.json  resto_druid_talents.md  talent_calculations.md
docs/designs/: 2026-04-02-web-app-design.md  2026-04-02-web-app-plan.md  2026-04-03-go-backend-rebuild-design.md  2026-04-03-go-backend-rebuild-plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  router.js  talentExplanations.js  wowheadSpells.js
frontend/src/components/: FightSelector.vue  LoadingSpinner.vue  PlayerSelector.vue  ReportHistory.vue  ReportInput.vue  ResultsTable.vue  WelcomeModal.vue
frontend/src/composables/: useAuth.js  useReportHistory.js  useSettings.js
frontend/src/utils/: parseReportUrl.js
frontend/src/views/: Analyze.vue  Home.vue  Settings.vue  SkippedTalents.vue
go-backend/: flourish  go.mod  go.sum
go-backend/cmd/flourish/: main.go
go-backend/config/: spell_coefficients.yaml  talents.yaml
go-backend/scripts/: parse_simc_spells.py
scripts/: fetch_talents.py
src/flourish/: cli.py
src/rdruid_analyzer/: cli.py
tests/analysis/: test_pipeline.py
tests/models/: test_combatantinfo.py  test_config.py  test_events.py
tests/output/: test_table.py
tests/tracking/: test_buff_tracker.py  test_hot_tracker.py
tests/wcl/: test_cache.py  test_client.py
tests/web/: test_cache.py  test_routes.py
(+155 files in other folders)
