[project]
name = "flourish"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "python-dotenv>=1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
flourish = "flourish.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flourish"]
